# nil-service

./: CMakeLists.txt  NOTES.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: config.cmake.in  cpack.cmake  pyproject.toml.in  toolchain.cmake
configure/: command
docs/: c-api.md
sandbox/: CMakeLists.txt  cert.pem  dh.pem  gen_pem_files  key.pem  main.c  main.cpp  main.lua  main.py  pipe_stdout.cpp  test_common.sh  test_pipe.sh  test_sandbox.sh
src/: CMakeLists.txt
src/ffi/lua/: README.md  nil_service.lua
src/ffi/python/: README.md  nil_service.py  nil_service.pyi
src/publish/nil/: service.h  service.hpp  service_ssl.hpp
src/publish/nil/service/: ID.hpp  IService.hpp  Self.hpp  TypedHandler.hpp  capi.h  codec.hpp  concat.hpp  consume.hpp  detail.hpp  map.hpp  split.hpp  structs.hpp  structs_ssl.hpp
src/publish/nil/service/detail/: AutoCast.hpp  Callable.hpp  Handlers.hpp  create_handler.hpp  create_message_handler.hpp  errors.hpp
src/publish/nil/service/gateway/: create.hpp
src/publish/nil/service/http/: Server.hpp
src/publish/nil/service/http/server/: create.hpp
src/publish/nil/service/https/server/: create.hpp
src/publish/nil/service/pipe/: create.hpp
src/publish/nil/service/self/: Server.hpp  create.hpp
src/publish/nil/service/tcp/: Client.hpp  Server.hpp
src/publish/nil/service/tcp/client/: create.hpp
src/publish/nil/service/tcp/server/: create.hpp
src/publish/nil/service/udp/: Client.hpp  Server.hpp
src/publish/nil/service/udp/client/: create.hpp
src/publish/nil/service/udp/server/: create.hpp
src/publish/nil/service/ws/: Client.hpp  Server.hpp
src/publish/nil/service/ws/client/: create.hpp
src/publish/nil/service/ws/server/: create.hpp
src/publish/nil/service/wss/client/: create.hpp
src/publish/nil/service/wss/server/: create.hpp
src/src/: ConnectedImpl.hpp  ID.cpp  Self.cpp  capi.cpp  codec.cpp  service.cpp  structs.cpp  structs_ssl.cpp  utils.hpp
src/src/c/: service.cpp
src/src/gateway/: create.cpp
src/src/http/: Server.cpp  WebSocket.cpp  WebSocket.hpp  WebSocketImpl.hpp
src/src/http/server/: Route.hpp  WebSocket.cpp  WebSocket.hpp  create.cpp
src/src/https/server/: Route.hpp  WebSocket.cpp  WebSocket.hpp  create.cpp
src/src/pipe/: create.cpp  mfkifo.cpp
src/src/proxies/: A.cpp  H.cpp  P.cpp  S.cpp  W.cpp
src/src/self/: Server.cpp  create.cpp
src/src/structs/: HTTPSService.hpp  HTTPService.hpp  MessagingService.hpp  ObservableService.hpp  RunnableService.hpp  Service.hpp  StandaloneService.hpp  WebService.cpp  WebService.hpp  WebTransaction.cpp  WebTransaction.hpp
src/src/tcp/: Client.cpp  Connection.cpp  Connection.hpp  Server.cpp
src/src/tcp/client/: create.cpp
src/src/tcp/server/: create.cpp
src/src/udp/: Client.cpp  Server.cpp
src/src/udp/client/: create.cpp
src/src/udp/server/: create.cpp
src/src/ws/: Client.cpp  Connection.cpp  Connection.hpp  Server.cpp
src/src/ws/client/: create.cpp
src/src/ws/server/: create.cpp
src/src/wss/: Connection.cpp  Connection.hpp
src/src/wss/client/: create.cpp
src/src/wss/server/: create.cpp
src/test/: BaseService.cpp  CMakeLists.txt  TypedHandler.cpp  create_message_handler.cpp
